--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@hcaptcha/react-hcaptcha": "^1.11.1",
     "@tailwindcss/forms": "^0.5.10",
     "next": "15.1.4",
     "react": "^19.0.0",
