--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
-    "extends": ["next/core-web-vitals", "prettier"],
+    "extends": "next/core-web-vitals",
     "rules": {
-      "no-unused-vars": "warn",
-      "no-console": "warn"
+      "@typescript-eslint/no-explicit-any": "off",
+      "@next/next/no-img-element": "off",
+      "@typescript-eslint/no-unused-vars": "warn"
     }
   }
