--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@hcaptcha/react-hcaptcha": "^1.11.1",
+    "@icons-pack/react-simple-icons": "^11.1.0",
     "@tailwindcss/forms": "^0.5.10",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
     "resend": "^4.1.1",
     "swiper": "^11.2.1"
   },
