--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "resend": "^4.1.1",
-    "swiper": "^11.2.1"
+    "swiper": "^11.2.1",
+    "validator": "^13.12.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/validator": "^13.12.2",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
