--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hcaptcha/react-hcaptcha": "^1.11.1",
     "@icons-pack/react-simple-icons": "^11.1.0",
     "@tailwindcss/forms": "^0.5.10",
+    "critters": "^0.0.23",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
